app/assets/stylesheets/stories/blurb.scss
.blurb {
  display: flex;
  width: 48%;
  height: 280px;
  border: 1px solid rgba(0,0,0,.1);
  margin: 10px;
}

.blurb-image {
  width: 40%;
  height: 100%;
  background-position: center;
  background-size: cover;
}

.blurb-image img {
  width: 100%;
}

.blurb-text {
  padding: 20px;
  width: 300px;
}

.blurb-text a {
  text-decoration: none;
}

.blurb-title {
  font-size: 20px;
  font-weight: bold;
}

.blurb-description {
  font-weight: 400;
  font-size: 14px;
  color: rgba(0,0,0,.44);
  margin-bottom: 130px;
  height: 0px;
  padding-bottom: 25px;
}

